// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification templates should add a new notification template 1`] = `
{
  "alertmanager_config": {
    "templates": [
      "foo",
    ],
  },
  "template_files": {
    "foo": "{{ define "foo" }}
  foo
{{ end }}",
  },
}
`;

exports[`notification templates should allow renaming a notification template 1`] = `
{
  "alertmanager_config": {
    "templates": [
      "rename-me-copy",
    ],
  },
  "template_files": {
    "rename-me-copy": "{{ define "rename-me-copy" }}
  rename me, please
{{ end }}",
  },
}
`;

exports[`notification templates should remove a notification template 1`] = `
{
  "alertmanager_config": {
    "templates": [],
  },
  "template_files": {},
}
`;

exports[`notification templates should update a notification template without renaming 1`] = `
{
  "alertmanager_config": {
    "templates": [
      "update-me",
    ],
  },
  "template_files": {
    "update-me": "{{ define "update-me" }}
  update me, please
{{ end }}",
  },
}
`;
